--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body>
   <h1>Self-Introductory Webpage</h1>
 
-  <img src="file:///C:/Users/pujan/Documents/IMG_20230207_140302_419_transcpr~2.jpg" alt="Profile Picture" width="200" height="200">
+  <img src="Image/Pujan.jpg" alt="Profile Picture" width="200" height="200">
 
   <p>Welcome to my personal webpage! My name is Patel Pujan. I'm a student studying in GP Ahmedabad college. Here's a little bit about me:</p>
 
